fix: font now rendering, updated custom font name for better code readability

--- a/danielle-lindblom-landing-page/src/index.css
+++ b/danielle-lindblom-landing-page/src/index.css
@@ -12,5 +12,5 @@
   --color-warning-red: #dc0004;
   --color-placeholder-gray: #ccc;
   --color-header-gray: #686868;
-  --font-primary: "Source Sans", "sans-serif";
+  --font-source: "Source Sans 3", "sans-serif";
 }
